# astronomer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Procfile  README.md
backend/: Cargo.toml
backend/src/: graphql.rs  index.html  lib.rs  main.rs  query.graphql
frontend/: Cargo.toml
frontend/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.js  graphql.rs  index.html  lib.rs  main.rs  query.graphql
static/: app.js
