[package]
name = "astronomer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
cached = "0.41.0"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.17"
mime = "0.3.16"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
