[package]
name = "astronomer"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
actix-web = "4.9.0"
cached = { version = "0.53.1", features = ["async"] }
derive_more = { version = "1.0.0", features = ["display"] }
env_logger = "0.11.5"
log = "0.4.22"
mime = "0.3.17"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
