[package]
name = "astronomer"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
actix-web = "4.9.0"
cached = { version = "0.55.1", features = ["async"] }
derive_more = { version = "2.0.1", features = ["display"] }
env_logger = "0.11.6"
log = "0.4.26"
mime = "0.3.17"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
