[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
cached = { version = "0.55.1", features = ["async"] }
derive_more = { version = "2.0.1", features = ["display"] }
env_logger = "0.11.8"
log = "0.4.27"
mime = "0.3.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
